Bug 501788 - Applications with lowercase names are missing from All Applications in Application Launcher if set to grid display
Summary: Applications with lowercase names are missing from All Applications in Applic...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 6.3.3
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-20 11:09 UTC by xezal
Modified: 2026-06-02 13:31 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments
Applications in grid layout missing ghostwriter (136.62 KB, image/jpeg)
2026-05-27 14:38 UTC, TraceyC
Details

Note You need to log in before you can comment on or make changes to this bug.
Description xezal 2025-03-20 11:09:42 UTC
STEPS TO REPRODUCE
1. Configure application launcher and set other applications to show in a grid.
2. Edit an application's name so that it starts with a lowercase latin letter or install such an application. (e.g qBittorrent)
3. Check All Applications.

OBSERVED RESULT
Application is delisted from All Applications while still visible in search and relevant categories. If it is the only entry that starts with that letter, the header letter is listed without entries.

EXPECTED RESULT
Application should be listed in All Applications.

SOFTWARE/OS VERSIONS
KDE Plasma Version:  6.3.3
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Comment 1 TraceyC 2025-03-21 00:57:06 UTC
I confirm this on git-master
I already had a number of applications installed whose names are all lowercase

ghostwriter, qBittorrent, gedit and others
None of them are listed in All Applications when it's set to grid view
They are listed in list view, and in search results
Comment 2 cwo 2026-05-27 10:44:19 UTC
I can't reproduce this on master. I tried ghostwriter (Fedora rpm) and qBittorrent (Flatpak), both show up in All Applications, in the correct section.
Comment 3 TraceyC 2026-05-27 14:38:08 UTC
Created attachment 192648 [details]
Applications in grid layout missing ghostwriter

I can still reproduce this on Plasma git-master. In this screenshot, ghostwriter should be listed but isn't.
Comment 4 cwo 2026-05-27 14:51:15 UTC
(In reply to TraceyC from comment #3)
> I can still reproduce this on Plasma git-master. In this screenshot,
> ghostwriter should be listed but isn't.

Oh, I missed the part about grid view. I can reproduce it there, but it works in list view.

Also, the color of the section headers is off. Are you using Union? I think it's a known issue there. Otherwise let me know and I'll try to dig a bit.
Comment 5 Bug Janitor Service 2026-05-27 15:40:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6655
Comment 6 TraceyC 2026-05-27 19:56:11 UTC
(In reply to cwo from comment #4)
> Also, the color of the section headers is off. Are you using Union? I think
> it's a known issue there. Otherwise let me know and I'll try to dig a bit.

Nope, not using Union. This was with the Breeze Twilight global theme.
Comment 7 cwo 2026-05-27 23:02:56 UTC
(In reply to TraceyC from comment #6)
> Nope, not using Union. This was with the Breeze Twilight global theme.

Ah, I can reproduce it with Breeze Twilight. I think it's a libplasma bug.
Comment 8 Bug Janitor Service 2026-05-27 23:18:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1503
Comment 9 cwo 2026-05-28 09:07:21 UTC
Git commit d4a2cd18a7138bf8cbd3f552ffeafbfbde7e4a14 by Christoph Wolk.
Committed on 28/05/2026 at 08:42.
Pushed by cwo into branch 'master'.

applets/kicker: make appEntry group upper case

Appentry's group property is generally the first letter of the app name,
with special handling for non-letters and CJK. The letter is case-
sensitive. This works fine in Kickoff's All Apps in list display style,
which uses ListView.section and its built-in initial letter collation,
but fails in grid display, which uses SortFilterProxyModels for the
sections, which are case-sensitive, and so do not include apps that
start with lower-case letters.

Instead, collate in the model, by always using the upper-case letter as
the group value.
FIXED-IN: 6.7.0

M  +1    -1    applets/kicker/appentry.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d4a2cd18a7138bf8cbd3f552ffeafbfbde7e4a14
Comment 10 Tobias Fella 2026-06-02 13:31:28 UTC
Git commit 19a4ab4999256977a753e675826724256dbd6565 by Tobias Fella, on behalf of Christoph Wolk.
Committed on 02/06/2026 at 12:35.
Pushed by tfella into branch 'Plasma/6.7'.

applets/kicker: make appEntry group upper case

Appentry's group property is generally the first letter of the app name,
with special handling for non-letters and CJK. The letter is case-
sensitive. This works fine in Kickoff's All Apps in list display style,
which uses ListView.section and its built-in initial letter collation,
but fails in grid display, which uses SortFilterProxyModels for the
sections, which are case-sensitive, and so do not include apps that
start with lower-case letters.

Instead, collate in the model, by always using the upper-case letter as
the group value.
FIXED-IN: 6.7.0


(cherry picked from commit d4a2cd18a7138bf8cbd3f552ffeafbfbde7e4a14)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>

M  +1    -1    applets/kicker/appentry.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/19a4ab4999256977a753e675826724256dbd6565