applets/kicker: make appEntry group upper case

Appentry's group property is generally the first letter of the app name,
with special handling for non-letters and CJK. The letter is case-
sensitive. This works fine in Kickoff's All Apps in list display style,
which uses ListView.section and its built-in initial letter collation,
but fails in grid display, which uses SortFilterProxyModels for the
sections, which are case-sensitive, and so do not include apps that
start with lower-case letters.

Instead, collate in the model, by always using the upper-case letter as
the group value.

BUG: 501788
FIXED-IN: 6.7.0